# auth-service

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  tz.md
app/core/: config.py
app/models/: user.py
migrations/: env.py
migrations/versions/: d903f4f117ce_initial.py
