[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Централизованная служба аутентификации и авторизации"
authors = ["laweyr-arch <paveldidko@gmail.com>"]
license = "3.12"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standard"], version = "^0.46.0"}
python-dotenv = "^1.2.2"
asyncpg = "^0.31.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
redis = "^7.4.0"
pydantic-settings = "^2.14.1"
argon2-cffi = "^25.1.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cryptography = "^48.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.15.12"
mypy = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
